--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
+		"james-heinrich/getid3":"*",
 		"laravel/framework": "5.0.*"
 	},
 	"require-dev": {
