--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-
+		"james-heinrich/getid3":"*",
+		"laravel/framework": "5.0.*",
 		"james-heinrich/getid3":"*"
 	},
 	"require-dev": {
