--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,13 @@
 	"scripts": {
 		"post-install-cmd": [
 			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php artisan optimize",
+			"composer update"
 		],
 		"post-update-cmd": [
 			"php artisan clear-compiled",
-			"php artisan optimize"
+			"php artisan optimize",
+			"composer update"
 		],
 		"post-create-project-cmd": []
 	},
