--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
 	"require": {
 		"james-heinrich/getid3":"*",
 		"laravel/framework": "5.0.*",
-		"james-heinrich/getid3":"*"
+		"james-heinrich/getid3":"*",
+        	"components/jquery": "*",
+        	"components/bootstrap": "*",
+        	"robloach/component-installer": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
