--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"james-heinrich/getid3":"*",
+		"james-heinrich/getid3":"1.9.*",
 		"laravel/framework": "5.0.*",
-		"james-heinrich/getid3":"*",
-        	"components/jquery": "*",
-        	"components/bootstrap": "*",
-        	"robloach/component-installer": "*"
+		"james-heinrich/getid3":"1.9.*",
+        	"components/jquery": "2.1.*",
+        	"components/bootstrap": "3.3.*",
+        	"robloach/component-installer": "0.2.*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
