--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,11 @@
 	"license": "MIT",
 	"type": "project",
 	"require": {
-		"james-heinrich/getid3":"1.9.*",
+		"james-heinrich/getid3":"*",
 		"laravel/framework": "5.0.*",
-        	"components/jquery": "2.1.*",
-        	"components/bootstrap": "3.3.*",
-        	"robloach/component-installer": "0.2.*"
+        	"components/jquery": "*",
+        	"components/bootstrap": "*",
+        	"robloach/component-installer": "*"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
